src/styles/main.scss
@import 'variables';
@import 'mixins';

@font-face {
    font-family: 'Byington';
    src: url('/fonts/byington/regular/byington_rg-webfont.eot');
    src: url('/fonts/byington/regular/byington_rg-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/byington/regular/byington_rg-webfont.woff2') format('woff2'),
         url('/fonts/byington/regular/byington_rg-webfont.woff') format('woff'),
         url('/fonts/byington/regular/byington_rg-webfont.ttf') format('truetype'),
         url('/fonts/byington/regular/byington_rg-webfont.svg#byington_rgregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Byington';
    src: url('/fonts/byington/bold/byington_bd-webfont.eot');
    src: url('/fonts/byington/bold/byington_bd-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/byington/bold/byington_bd-webfont.woff2') format('woff2'),
         url('/fonts/byington/bold/byington_bd-webfont.woff') format('woff'),
         url('/fonts/byington/bold/byington_bd-webfont.ttf') format('truetype'),
         url('/fonts/byington/bold/byington_bd-webfont.svg#byingtonbold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Byington';
    src: url('/fonts/byington/italic/byington_rg_it-webfont.eot');
    src: url('/fonts/byington/italic/byington_rg_it-webfont.eot?#iefix') format('embedded-opentype'),
         url('/fonts/byington/italic/byington_rg_it-webfont.woff2') format('woff2'),
         url('/fonts/byington/italic/byington_rg_it-webfont.woff') format('woff'),
         url('/fonts/byington/italic/byington_rg_it-webfont.ttf') format('truetype'),
         url('/fonts/byington/italic/byington_rg_it-webfont.svg#byington_rgitalic') format('svg');
    font-weight: normal;
    font-style: italic;
}

html {
    font-family: $serif;
    font-size: 62.5%;
    line-height: 1.5714285714;
}

body {
    // scss-lint:disable IdSelector
    display: flex;
    flex-direction: column;
    font-size: 1.6rem;
    margin: 0;
    min-height: 100vh;

    > #main {
        flex: 1;
    }
}

* {
    box-sizing: border-box;
}

a {
    color: color(links);
    text-decoration: none;

    @include wcag2-aa {
        color: color(links, dark);
    }

    @include wcag2-aaa {
        color: color(links, dark);
    }

    &:active,
    &:focus,
    &:hover {
        color: color(red);
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: color(blue);
    margin-bottom: 0.4em;
    margin-top: 0.4em;
}

h1 {
    font-size: 4.8rem;
}

h2 {
    font-size: 3.2rem;
}

h3 {
    font-size: 2.8rem;
}

h4 {
    font-size: 2.4rem;
}

h5 {
    font-size: 1.9rem;
}

h6 {
    font-size: 1.7rem;
}

p {
    font-family: $sans-serif;
    font-weight: 400;
}

@import 'components/blockquotes';
@import 'components/blocks';
@import 'components/buttons';
@import 'components/forms';
// @import 'components/headers';
@import 'components/issue-blocks';
@import 'components/notices';
@import 'components/pages';
// @import 'components/responsive';

.banner {
    background-color: lightblue;
    background-position: center center;
    background-size: cover;
    display: block;
    height: calc(100vh - 16.6rem);
    max-height: 70vw;
    min-height: 60rem;
    position: relative;

    @media (min-width: 1200px) {
        min-height: 50vw;
    }
}

.curved-bottom {
    overflow: hidden;
    position: relative;

    &::after {
        background-image: url('/images/components/divider.svg');
        bottom: 0;
        content: '';
        height: 5rem;
        left: 0;
        margin-bottom: -0.5rem;
        position: absolute;
        right: 0;
    }
}

.noscript {
    margin-top: 10rem;
    text-align: center;

    img {
        height: auto;
        width: 50vw;
    }
}

